--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -4,21 +4,48 @@
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
-    // height: 100vh;
     min-height: 1080px;
-    padding: 40px 45px 0 125px;
+    padding: 40px 115px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    z-index: 2;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        background-color: $white-color;
+        opacity: 0.25;
+        height: calc(100% + 40px);
+        width: 1px;
+        top: -40px;
+    }
+    &::before {
+        right: 50%;
+        transform: translateX(-50%);
+    }
+    &::after {
+        right: 114px;
+    }
     &__top {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        &-logo {
+            z-index: 6;
+        }
     }
     &__burger {
-        position: relative;
+        position: absolute;
+        right: 40px;
+        top: 60px;
         width: 32px;
         height: 23px;
         display: flex;
         align-items: center;
         cursor: pointer;
+        z-index: 6;
         span {
             position: absolute;
             display: block;
@@ -41,5 +68,118 @@
         &::after {
             bottom: 0;
         }
+    }
+    &__social {
+        li {
+            margin-bottom: 35px;
+        }
+    }
+    &__center {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        position: relative;
+        margin-top: -30px;
+        &-arrow {
+            position: relative;
+            &::after {
+                content: "";
+                position: absolute;
+                background-color: $white-color;
+                opacity: 0.25;
+                width: 100%;
+                height: 1px;
+                right: 0;
+                top: 0;
+            }
+        }
+        &-left {
+            padding-left: 90px;
+        }
+        &-right {
+            position: absolute;
+            right: -70px;
+            top: 0;
+            text-align: center;
+            z-index: 6;
+        }
+    }
+    &__bottom {
+        padding-bottom: 60px;
+        height: 20px;
+        position: relative;
+        display: flex;
+        cursor: pointer;
+        z-index: 6;
+        &-text {
+            font-size: 16px;
+            display: block;
+            user-select: none;
+        }
+        &-line {
+            position: relative;
+            display: flex;
+            margin: 0 20px 0 -20px;
+            span {
+                display: block;
+                position: absolute;
+                bottom: -15px;
+                width: 3px;
+                background-color: $white-color;
+                &:nth-child(1) {
+                    left: -7px;
+                    height: 15px;
+                    &.active {
+                        animation: soundOn 0.8s infinite ease-in-out;
+                    }
+                }
+                &:nth-child(2) {
+                    left: 0;
+                    height: 20px;
+                    &.active {
+                        animation: soundOn 0.6s infinite ease-in-out;
+                    }
+                }
+                &:nth-child(3) {
+                    right: -10px;
+                    height: 10px;
+                    &.active {
+                        animation: soundOn 0.4s infinite ease-in-out;
+                    }
+                }
+            }
+        }
+    }
+    &__menu {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-color: $headre_menu-bg;
+        z-index: 5;
+        transform: translateX(100%);
+        @include transition;
+        &.active {
+            transform: translateX(0);
+        }
+    }
+}
+.arrow-conteiner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 110px;
+    background-color: $red-color;
+    position: absolute;
+    left: 0;
+    top: 1px;
+}
+@keyframes soundOn {
+    0% {
+        height: 20px;
+    }
+    100% {
+        height: 5px;
     }
 }
