--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,6 +1,11 @@
 $font-bold: "Alegreya-Bold";
-$font-normal: "Alegreya";
 $font-black: "Alegreya-Black";
+
+$font-normal: "GothamPro";
+$font-bold: "GothamPro-Bold";
+$font-Geometria-medium: "Geometria-Medium";
+$font-Geometria: "Geometria";
+$font-Geometria-bold: "Geometria-Bold";
 
 // color
 $black_default-color: rgb(0, 0, 0);
@@ -10,9 +15,13 @@ $blue-color: rgb(0, 72, 138);
 $sldr_btn-color: rgb(0, 82, 156);
 $bg-color: rgb(223, 246, 254);
 $white-color: rgb(255, 255, 255);
-$red-color: rgb(237, 28, 36);
-$red-color-hover: rgb(192, 23, 28);
+$red-color: rgb(205, 17, 17);
+$red-color-hover: rgb(205, 17, 17);
 $link_color: rgb(28, 113, 236);
+$headre_menu-bg: rgb(18, 18, 18);
+$about-white-bg: rgb(253, 254, 255);
+$about-white-text: rgb(0, 0, 0);
+$about-white-pseudo-text: rgb(242, 244, 246);
 
 // media
 $laptop: 1440px;
